# dc_sdr

./: .~lock.dc_sdr.ods#  README.md  dc_sdr.bak  dc_sdr.csv  dc_sdr.kicad_pcb  dc_sdr.kicad_prl  dc_sdr.kicad_pro  dc_sdr.kicad_sch  dc_sdr.kicad_sym  dc_sdr.ods  dc_sdr.wbk  dc_sdr.xml  firmware.uf2  fp-info-cache  fp-lib-table  sym-lib-table  ~dc_sdr.kicad_pcb.lck  ~dc_sdr.kicad_sch.lck
DC_SDR.pretty/: 9front.kicad_mod  AMPHENOL_SFV24R-2STE1HLF.kicad_mod  AntennaPad.kicad_mod  PLMG5-GH-V-T_R.kicad_mod  SON40P200X200X80-11N.kicad_mod  SON50P300X200X60-9N.kicad_mod  dragon_labs.kicad_mod  dragon_labs2.kicad_mod  dragon_labs3.kicad_mod  fuckwits.kicad_mod
firmware/: CMakeLists.txt  colormap_gen.py  upload_ryz.sh
firmware/.old/: board.cpp  board.h  parrots.cpp
firmware/lib/: colormap.h  r820t.cpp  r820t.h  st77xx.cpp  st77xx.h  tpl0401.cpp  tpl0401.h
firmware/lib/dsp/: complex.h  fft.h  fp824.h
firmware/lib/ws2812/: ws2812.cpp  ws2812.h
firmware/src/: dsp_thread.cpp  dsp_thread.h  lcd.h  main.cpp  parrots.cpp  parrots.h
full_assembly/: full_assembly.FCStd
gerbers/: dc_sdr-B_Cu.gbl  dc_sdr-B_Mask.gbs  dc_sdr-B_Paste.gbp  dc_sdr-B_Silkscreen.gbo  dc_sdr-Edge_Cuts.gm1  dc_sdr-F_Cu.gtl  dc_sdr-F_Mask.gts  dc_sdr-F_Paste.gtp  dc_sdr-F_Silkscreen.gto  dc_sdr-In1_Cu.g2  dc_sdr-In2_Cu.g3  dc_sdr-NPTH-drl_map.gbr  dc_sdr-NPTH.drl  dc_sdr-PTH-drl_map.gbr  dc_sdr-PTH.drl  dc_sdr-job.gbrjob
lcd0_model/: lcd0_model-BodyPad001.step  lcd0_model-BodyPad002.step  lcd0_model.FCStd  lcd0_model.FCStd1
lcd1_model/: lcd1_model-BodyPad001.step  lcd1_model.FCStd  (+1 more)
(+3 files in other folders)
